--- a/campaign/templates/app/overall-dashboard.html
+++ b/campaign/templates/app/overall-dashboard.html
@@ -43,7 +43,7 @@
                     <li><a>Last 7 days</a></li>
                     <li><a class="active">Last 30 days</a></li>
                     <li><a>This quarter</a></li>
-                    <li><a>Custom range...</a></li>
+                    <li><a>This Year</a></li>
                 </ul>
             </div>
             <button class="btn btn-primary">
